--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "marked": "^0.3.6",
+    "prismjs": "^1.8.3",
     "vue": "^2.5.2"
   },
   "devDependencies": {
